# saga

./: .gitignore  README.md  TEST_RESULTS.md  saga-spec.md
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/org/saga/contacts/: ContactKeyIntegrationTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/saga/: SagaApplication.kt
android/app/src/main/java/org/saga/call/: CallOrigin.kt  CallSecurityPresenter.kt  CallSecurityStateResolver.kt  SagaCallEventHub.kt  SagaCallRegistry.kt
android/app/src/main/java/org/saga/contacts/: ContactKeyRepository.kt  TestContactSeeder.kt  (+1 more)
android/app/src/main/res/drawable/: ic_saga_key_error.xml  ic_saga_padlock_downgraded.xml  ic_saga_padlock_locked.xml  ic_saga_padlock_open.xml
android/app/src/main/res/layout/: activity_in_call.xml  activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
docs/: key-sync-investigation.md
icons/: readme.md
saga-iroh-core/: Cargo.toml  README.md
saga-iroh-core/src/: iroh_transport.rs  lib.rs
testing/e2e/: README.md  diagnose-relay-timeout.sh  e2e-common.sh  provision-emulator.sh  run-alice-bob-probe.sh  run-case-standalone-inbound.sh  run-case-standalone.sh  run-e2e-cellular-cue.sh  run-e2e-full.sh  run-e2e-iroh.sh  run-e2e-unencrypted-keyed.sh  saga_dev_identity_alice.xml  saga_dev_identity_bob.xml  saga_encryption_peer.xml  saga_encryption_peer_bob.xml  saga_iroh_relay_local.xml  saga_test_false.xml  saga_test_true.xml  seed-test-contacts.sh  verify-contact-keys.sh
testing/iroh-relay/: README.md  start-local-relay.sh  stop-local-relay.sh
testing/mock-token/: Cargo.toml
testing/mock-token/src/: lib.rs
(+36 files in other folders)
