[package]
name = "saga-iroh-core"
version = "0.1.0"
edition = "2021"
description = "JNI bridge for Saga Iroh call transport on Android"

[lib]
name = "saga_iroh_core"
crate-type = ["cdylib"]

[features]
default = []
iroh-transport = ["dep:iroh", "dep:tokio", "dep:blake3"]
mock-token = ["iroh-transport", "dep:mock_token"]

[dependencies]
jni = "0.21"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[dependencies.iroh]
version = "1.0"
optional = true
features = ["test-utils"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "time", "sync", "io-util"]
optional = true

[dependencies.blake3]
version = "1"
optional = true

[dependencies.mock_token]
package = "mock-token"
path = "../testing/mock-token"
optional = true

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
codegen-units = 1
